# c-book-exercises

./: CMakeLists.txt  README.md  address-arithimethic.c  arg-grep.c  celsius-to-fahr.c  char-count.c  char-pointers.c  command-line-args.c  count-line.c  count.c  detab.c  functions.c  grep.c  multi-dim-array.c  newline-counter.c  pointer-to-function.c  pointers.c  print-input.c  range.c  str-n-copy.c  strcat-pointer-version.c  strcat.c  strcmp.c  strend-pointer.c  strlen.c  temp-conversion.c  wc.c
